避免搜索模式重复计算

--- a/src/main/resources/language/Italian.txt
+++ b/src/main/resources/language/Italian.txt
@@ -167,15 +167,15 @@ If you know multiple keywords of a file=Se conosci più parole chiave di un file
 you can separate them with ";" (semicolon) to search together as keywords.=è possibile separarli con ";" (punto e virgola) per cercare insieme come parole chiave.
 When entering "/test" in the search bar=Quando inserisci "/prova" nella barra di ricerca
 the file containing "test" in the path will be displayed below the search bar=Il file contenente "prova" nel percorso sarà visualizzato sotto la barra di ricerca
-Add ":" + suffix after the keyword to achieve a more precise search=Aggiungi ":""suffisso +dopola parola chiave per ottenere una ricerca più precisa
+Add "::" + suffix after the keyword to achieve a more precise search=Aggiungi "::" + suffisso dopo la parola chiave per ottenere una ricerca più precisa
 The program has the following four suffixes=Il programma ha i seguenti quattro suffissi
 not case sensitive=non caso sensibile
-":d" is the suffix for searching only folders=":d" è il suffisso per la ricerca solo di cartelle
-":f" is the suffix to search only for files=f"è il suffisso da cercare solo per i file
-":full" means full word matching, but case insensitive=":"full"significa"full word matching, but case insensibili"
-":case" means case sensitive=per caso si intende caso sensibile
+"::d" is the suffix for searching only folders="::d" è il suffisso per la ricerca solo nelle cartelle
+"::f" is the suffix to search only for files="::f" è il suffisso per cercare solo i file
+"::full" means full word matching, but case insensitive="::full" significa corrispondenza di parole complete, ma senza distinzione tra maiuscole e minuscole
+"::case" means case sensitive="::case" significa case sensitive
 You can also combine different suffixes to use=È inoltre possibile combinare diversi suffissi da usare
-Different keywords are separated by ";" (semicolon), suffix and keywords are separated by ":" (colon)=Le parole chiave diverse sono separate da ";" (punto e virgola), suffisso e parole chiave sono separate da ":" (colon)
+Different keywords are separated by ";" (semicolon), suffix and keywords are separated by "::" (colon)=Le parole chiave diverse sono separate da ";" (punto e virgola), suffisso e parole chiave sono separate da "::" (colon)
 Click "Enter" to open the file directly=Fare clic su "Invio" per aprire direttamente il file
 Click "Ctrl + Enter" to open the folder where the file is located=Fare clic su "Ctrl + Enter" per aprire la cartella dove si trova il file
 Click "Shift + Enter" to open the file as an administrator (use with caution)=Fare clic su "Shift + Enter" per aprire il file come amministratore (usare con cautela)
