--- a/src/main/resources/language/korean.txt
+++ b/src/main/resources/language/korean.txt
@@ -167,15 +167,15 @@ If you know multiple keywords of a file=파일 하나 에 여러 키 워드 를 
 you can separate them with ";" (semicolon) to search together as keywords.=";" (분점) 으로 나 누 어 키워드 로 함께 검색 할 수 있 습 니 다.
 When entering "/test" in the search bar=검색 창 에 "/ 테스트" 를 입력 할 때
 the file containing "test" in the path will be displayed below the search bar=경로 에 'test' 를 포함 하 는 파일 은 검색 표시 줄 아래 에 표 시 됩 니 다.
-Add ":" + suffix after the keyword to achieve a more precise search=키워드 뒤에 ":" + 접 미 어 를 추가 하여 보다 정확 한 검색 을 실현 합 니 다.
+Add "::" + suffix after the keyword to achieve a more precise search=보다 정확한 검색을 위해 키워드 뒤에 "::" + 접미사 추가
 The program has the following four suffixes=이 프로그램 은 아래 네 개의 접미사 가 있다.
 not case sensitive=대소 문자 구분 안 함
-":d" is the suffix for searching only folders=": d" 는 폴 더 만 검색 할 수 있 는 접미사 입 니 다.
-":f" is the suffix to search only for files="f" 는 파일 만 검색 하 는 접미사 입 니 다.
-":full" means full word matching, but case insensitive="full" 은 단어 전체 가 일치 하지만 대소 문 자 는 구분 하지 않 는 다 는 뜻 이다.
-":case" means case sensitive="케이스" 는 대소 문자 구분
+"::d" is the suffix for searching only folders="::d"는 폴더만 검색하기 위한 접미사입니다.
+"::f" is the suffix to search only for files="::f"는 파일만 검색하는 접미사입니다.
+"::full" means full word matching, but case insensitive="::full"은 전체 단어 일치를 의미하지만 대소문자를 구분하지 않습니다.
+"::case" means case sensitive="::case"는 대소문자를 구분한다는 의미입니다.
 You can also combine different suffixes to use=다른 접 미 어 를 조합 해서 사용 할 수 있 습 니 다.
-Different keywords are separated by ";" (semicolon), suffix and keywords are separated by ":" (colon)=다른 키 워드 는 ";" (분점) 로 구분 하고, 접미사 와 키 워드 는 ":" (콜론) 로 구분 합 니 다.
+Different keywords are separated by ";" (semicolon), suffix and keywords are separated by "::" (colon)=다른 키워드는 ";"으로 구분됩니다. (세미콜론), 접미사 및 키워드는 "::"(콜론)으로 구분됩니다.
 Click "Enter" to open the file directly="Enter" 를 누 르 면 바로 파일 을 연다.
 Click "Ctrl + Enter" to open the folder where the file is located="Ctrl + Enter" 를 누 르 면 파일 이 있 는 폴 더 를 엽 니 다.
 Click "Shift + Enter" to open the file as an administrator (use with caution)="Shift + Enter" 를 누 르 면 관리자 로 서 파일 을 엽 니 다 (조심해 서 사용)
