将模式匹配分隔符修改回":"

--- a/src/main/resources/language/French.txt
+++ b/src/main/resources/language/French.txt
@@ -167,15 +167,15 @@ If you know multiple keywords of a file=Si vous connaissez plusieurs mots clés 
 you can separate them with ";" (semicolon) to search together as keywords.=Vous pouvez les séparer par ";" (point - virgule) et les rechercher ensemble comme mots clés.
 When entering "/test" in the search bar=Lorsque vous saisissez "/test" dans la barre de recherche
 the file containing "test" in the path will be displayed below the search bar=Les fichiers avec "Test" dans le chemin sont affichés sous la barre de recherche
-Add "::" + suffix after the keyword to achieve a more precise search=Ajoutez "::" + suffixe après le mot-clé pour obtenir une recherche plus précise
+Add ":" + suffix after the keyword to achieve a more precise search=Ajoutez ":" + suffixe après le mot-clé pour obtenir une recherche plus précise
 The program has the following four suffixes=Ce programme a les quatre suffixes suivants
 not case sensitive=Insensible à la casse
-"::d" is the suffix for searching only folders="::d" est le suffixe pour rechercher uniquement les dossiers
-"::f" is the suffix to search only for files="::f" est le suffixe pour rechercher uniquement les fichiers
-"::full" means full word matching, but case insensitive="::full" signifie une correspondance complète des mots, mais insensible à la casse
-"::case" means case sensitive="::case" signifie sensible à la casse
+":d" is the suffix for searching only folders=":d" est le suffixe pour rechercher uniquement les dossiers
+":f" is the suffix to search only for files=":f" est le suffixe pour rechercher uniquement les fichiers
+":full" means full word matching, but case insensitive=":full" signifie une correspondance complète des mots, mais insensible à la casse
+":case" means case sensitive=":case" signifie sensible à la casse
 You can also combine different suffixes to use=Vous pouvez également combiner différents suffixes
-Different keywords are separated by ";" (semicolon), suffix and keywords are separated by "::" (colon)=Les différents mots - clés sont séparés par ";" (point - virgule), les suffixes et les mots - clés sont séparés par "::" (deux points)
+Different keywords are separated by ";" (semicolon), suffix and keywords are separated by ":" (colon)=Les différents mots - clés sont séparés par ";" (point - virgule), les suffixes et les mots - clés sont séparés par ":" (deux points)
 Click "Enter" to open the file directly=Cliquez sur Entrée pour ouvrir le fichier directement
 Click "Ctrl + Enter" to open the folder where the file is located=Cliquez sur Ctrl + enter pour ouvrir le dossier dans lequel se trouve le fichier
 Click "Shift + Enter" to open the file as an administrator (use with caution)=Cliquez sur Maj + enter pour ouvrir le fichier en tant qu'administrateur (utilisez - le avec précaution)
