--- a/src/main/resources/language/German.txt
+++ b/src/main/resources/language/German.txt
@@ -167,15 +167,15 @@ If you know multiple keywords of a file=Wenn Sie mehrere Schlüsselwörter einer
 you can separate them with ";" (semicolon) to search together as keywords.=Sie können sie mit ";" (Semikolon) trennen, um gemeinsam als Schlüsselwörter zu suchen.
 When entering "/test" in the search bar=Bei Eingabe von "/test" in die Suchleiste
 the file containing "test" in the path will be displayed below the search bar=die Datei mit "test" im Pfad wird unterhalb der Suchleiste angezeigt
-Add "::" + suffix after the keyword to achieve a more precise search=Fügen Sie „::“ + Suffix nach dem Schlüsselwort hinzu, um eine präzisere Suche zu erreichen
+Add ":" + suffix after the keyword to achieve a more precise search=Fügen Sie „:“ + Suffix nach dem Schlüsselwort hinzu, um eine präzisere Suche zu erreichen
 The program has the following four suffixes=Das Programm hat die folgenden vier Suffixe
 not case sensitive=nicht Groß-/Kleinschreibung
-"::d" is the suffix for searching only folders="::d" ist das Suffix, um nur Ordner zu durchsuchen
-"::f" is the suffix to search only for files="::f" ist das Suffix, um nur nach Dateien zu suchen
-"::full" means full word matching, but case insensitive="::full" bedeutet vollständige Wortsuche, aber ohne Berücksichtigung der Groß-/Kleinschreibung
-"::case" means case sensitive="::case" bedeutet Groß-/Kleinschreibung
+":d" is the suffix for searching only folders=":d" ist das Suffix, um nur Ordner zu durchsuchen
+":f" is the suffix to search only for files=":f" ist das Suffix, um nur nach Dateien zu suchen
+":full" means full word matching, but case insensitive=":full" bedeutet vollständige Wortsuche, aber ohne Berücksichtigung der Groß-/Kleinschreibung
+":case" means case sensitive=":case" bedeutet Groß-/Kleinschreibung
 You can also combine different suffixes to use=Sie können auch verschiedene Suffixe kombinieren
-Different keywords are separated by ";" (semicolon), suffix and keywords are separated by "::" (colon)=Verschiedene Schlüsselwörter werden durch ";" (Semikolon), Suffix und Schlüsselwörter durch "::" (Doppelpunkt) getrennt.
+Different keywords are separated by ";" (semicolon), suffix and keywords are separated by ":" (colon)=Verschiedene Schlüsselwörter werden durch ";" (Semikolon), Suffix und Schlüsselwörter durch ":" (Doppelpunkt) getrennt.
 Click "Enter" to open the file directly=Klicken Sie auf "Enter", um die Datei direkt zu öffnen
 Click "Ctrl + Enter" to open the folder where the file is located=Klicken Sie auf "Strg + Enter", um den Ordner zu öffnen, in dem sich die Datei befindet.
 Click "Shift + Enter" to open the file as an administrator (use with caution)=Klicken Sie auf "Shift + Enter", um die Datei als Administrator zu öffnen (Vorsicht)
